--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   
   <groupId>org.commonjava.indy.service</groupId>
   <artifactId>indy-security</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   
   <name>Indy :: Library :: Security</name>
   <inceptionYear>2022</inceptionYear>
@@ -36,7 +36,7 @@
     <connection>scm:git:https://github.com/Commonjava/indy-security</connection>
     <developerConnection>scm:git:https://github.com/Commonjava/indy-security</developerConnection>
     <url>http://github.com/Commonjava/indy-security</url>
-    <tag>indy-security-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
