Add debug info for user

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -14,6 +14,11 @@ quarkus:
       level: INFO
     level: INFO
     min-level: TRACE
+  oidc:
+    enabled: true
+    auth-server-url: http://localhost
+  devservices:
+    enabled: false
   security:
     auth:
       enabled-in-dev-mode: false
