Enhance the security constraint to support multiple roles
   Sometimes for a matched paths and methods, we need to let more than
   one role to have authorization, but current way we only support one
   role. This PR will add multiple roles.

--- a/src/test/resources/security-bindings.yaml
+++ b/src/test/resources/security-bindings.yaml
@@ -1,18 +1,22 @@
 constraints:
-  - role: admin
-    urlPattern: "/api/admin/.*"
+  - urlPattern: "/api/admin/.*"
+    roles:
+      - admin
     methods:
       - POST
       - PUT
       - DELETE
-  - role: user
-    urlPattern: "/api/.*"
+  - urlPattern: "/api/.*"
+    roles:
+      - user
     methods:
       - POST
       - PUT
       - DELETE
-  - role: power-user
-    urlPattern: "/api/admin/stores/.*"
+  - urlPattern: "/api/admin/stores/.*"
+    roles:
+      - power-user
+      - admin
     methods:
       - POST
       - PUT
