--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.commonjava</groupId>
     <artifactId>service-parent</artifactId>
-    <version>2</version>
+    <version>5-SNAPSHOT</version>
   </parent>
   
   <groupId>org.commonjava.indy.service</groupId>
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-yaml</artifactId>
-      <version>2.13.3</version>
+      <version>2.16.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -109,7 +109,7 @@
     </resources>
     <plugins>
       <plugin>
-        <groupId>io.quarkus</groupId>
+        <groupId>io.quarkus.platform</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
       </plugin>
     </plugins>
